@@ -12,6 +12,7 @@ Improvements:
 Bug fixes:
 
  - Fix stash diff display when reloading the stash view after a deleting.
+ - Correctly identify and highlight the remote branch tracked by HEAD.
 
 tig-1.2.1
 ---------
